--- a/Common/Data/Language/ENG_MSG.TXT
+++ b/Common/Data/Language/ENG_MSG.TXT
@@ -2344,6 +2344,6 @@ _@M2391_ "Earth Model"
 _@M2392_ "Error: Port not opened!"
 
 _@M2393_ "23 Options"
-_@M2394_ "Min Autozoom threshold"
-_@M2395_ "Max Autozoom threshold"
+_@M2394_ "Min Autozoom"
+_@M2395_ "Max Autozoom"
 
